--- a/organization_searcher/src/main/res/layout/repository_item.xml
+++ b/organization_searcher/src/main/res/layout/repository_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/carCard"
+        android:id="@+id/repository_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
