Adding bottom sheet when long press to retrieve the info

--- a/organization_searcher/src/main/res/values/dimens.xml
+++ b/organization_searcher/src/main/res/values/dimens.xml
@@ -6,7 +6,6 @@
     <dimen name="default_constraint_layout_size">0dp</dimen>
     <dimen name="default_padding">8dp</dimen>
 
-
     <dimen name="card_view_corner_radius_list">4dp</dimen>
     <dimen name="card_view_elevation_list">4dp</dimen>
 
@@ -17,5 +16,10 @@
     <dimen name="description_text_size">15sp</dimen>
 
     <dimen name="padding_linear_layout_repository_info">8dp</dimen>
+
+
+    <!-- Bottom sheet fragment-->
+    <dimen name="bottom_sheet_repository_text_size">24sp</dimen>
+    <dimen name="bottom_sheet_owner_login_text_size">18sp</dimen>
 
 </resources>
