--- a/organization_searcher/src/main/res/values/dimens.xml
+++ b/organization_searcher/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- RepositoryByOrganizationSearcherActivity -->
+    <dimen name="no_internet_connection_text_size">18sp</dimen>
+
+    <!-- Repository item -->
     <dimen name="repo_name_size">24sp</dimen>
     <dimen name="icon_search_width">40dp</dimen>
     <dimen name="default_constraint_layout_size">0dp</dimen>
